--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,13 @@ log = "0.4"
 env_logger = "0.11"
 parking_lot = "0.12"  # Faster mutexes than std
 
+# Config file support
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
+
+# Hot-reload support (file watching)
+notify = "6.1"
+
 # Optional: profiling
 # puffin = "0.19"  # Uncomment when ready to profile
 
